Fri Nov 14 09:31:47 1997  Scott Christley  <scottc@net-community.com>

	* config.make.in (library_combo): Rename to default_library_combo.
	* brain.make: Use the default library combo as an initial setting.

Thu Nov 13 15:08:13 1997  Scott Christley  <scottc@net-community.com>

	* rules.make: Replace dash with underscore for type not target.
	* openapp.in: Determine host information if necessary.
	* debugapp.in: Determine host information if necessary.
	* MediaBook.sh: Save original variables.
	* config.site (bindirtop): Define.
	* MediaBook.func (hostinfo, assignpaths): New functions.
	(librarycombo, systemroot, localroot, userroot): New functions.
	* GNUmakefile.in (GNUSTEP_INSTALLATION_DIR): Define.

Thu Nov 13 11:35:31 1997  Scott Christley  <scottc@net-community.com>

	* GNUstep.sh.in: Add user and local to PATH.  Make user root
	be GNUstep directory in home directory.
	* GNUmakefile.in (uninstall): Only uninstall files that we
	have installed.

Thu Nov 13 09:27:33 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* test.make: Renamed to test-library.make.

Wed Nov 12 19:12:20 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* bundle.make: Changed to work with the new rules.make rules.
	* library.make: Make the install target depend on all.
	* test.make: Reworked for the new rules.make.
	* rules.make: Removed the definitions needed by test.make.

Wed Nov 12 13:29:24 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* common.make (OBJCFLAGS): Removed the -Wno-implicit flag since it
	could hide some programming errors.

Tue Nov 11 14:43:56 1997  Adam Fedor  <fedor@doc.com>

	* target.make (Solaris/BUNDLE_LDFLAGS): Change the flags.

Fri Nov  7 16:33:22 1997  Ovidiu Predescu <ovidiu@net-community.com>

	Reworked a bunch of files to be more general and faster.
	* clean.make: File removed.
	* GNUmakefile.in: Removed the clean.make.
	* rules.make: Reworked to be simpler and faster.
	* library.make: Reworked for the new rules.make.
	* names.make: Likewise.